# projelli

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_WORKFLOW.md  PROJECT_IMPLEMENTATION.md  PROJECT_VISION.md  PROJELLI_WINDOWS_MIGRATION.md  UPDATED_PLAYWRIGHT_TESTING.md  V1_LAUNCH_PLAN.md  WIN-015-PROMPT-CONFIRM-AUDIT.md  WIN-024-MANUAL-TESTING-CHECKLIST.md  WINDOWS_DESKTOP_BACKLOG.md  WINDOWS_MIGRATION_COMPLETE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  v1.0.1-ISSUES.md  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  DEFINITION_OF_DONE.md  PRD.md  SECURITY.md  VISION.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  mod.rs
src/hooks/: index.ts  useAIChatFiles.ts  useApiKeys.ts  useConfirmDialog.ts  useDragDrop.ts  useKeyboardShortcuts.ts  useModelList.ts  usePromptDialog.ts  useSourceCards.ts  useTrash.ts
src/stores/: aiChatStore.ts  editorStore.ts  index.ts  workflowStore.ts  workspaceStore.ts
src/styles/: globals.css
src/types/: ai.ts  analysis.ts  audit.ts  file-system-access.d.ts  index.ts  research.ts  tauri-plugins.d.ts  workflow.ts  workspace.ts
src/utils/: diff.ts  file-utils.ts  index.ts  openExternal.ts  prompt-security.ts  saveFile.ts
tests/: App.test.tsx  v1.0.1-fixes.test.ts
website/: index.html
(+143 files in other folders)
